; ModuleID = '/home/carl/AnghaBench/git/extr_archive-tar.c_find_tar_filter.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive-tar.c_find_tar_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archiver = type { i32* }

@nr_tar_filters = common dso_local global i32 0, align 4
@tar_filters = common dso_local global %struct.archiver** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.archiver* (i8*, i32)* @find_tar_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.archiver* @find_tar_filter(i8* %0, i32 %1) #0 {
  %3 = alloca %struct.archiver*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.archiver*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %8

8:                                                ; preds = %37, %2
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @nr_tar_filters, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %40

12:                                               ; preds = %8
  %13 = load %struct.archiver**, %struct.archiver*** @tar_filters, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.archiver*, %struct.archiver** %13, i64 %15
  %17 = load %struct.archiver*, %struct.archiver** %16, align 8
  store %struct.archiver* %17, %struct.archiver** %7, align 8
  %18 = load %struct.archiver*, %struct.archiver** %7, align 8
  %19 = getelementptr inbounds %struct.archiver, %struct.archiver* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @strncmp(i32* %20, i8* %21, i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %36, label %25

25:                                               ; preds = %12
  %26 = load %struct.archiver*, %struct.archiver** %7, align 8
  %27 = getelementptr inbounds %struct.archiver, %struct.archiver* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load i32, i32* %5, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %36, label %34

34:                                               ; preds = %25
  %35 = load %struct.archiver*, %struct.archiver** %7, align 8
  store %struct.archiver* %35, %struct.archiver** %3, align 8
  br label %41

36:                                               ; preds = %25, %12
  br label %37

37:                                               ; preds = %36
  %38 = load i32, i32* %6, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %6, align 4
  br label %8

40:                                               ; preds = %8
  store %struct.archiver* null, %struct.archiver** %3, align 8
  br label %41

41:                                               ; preds = %40, %34
  %42 = load %struct.archiver*, %struct.archiver** %3, align 8
  ret %struct.archiver* %42
}

declare dso_local i32 @strncmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
